web-infras/parser/tests/fixtures/babel/core/uncategorised/521/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,13)
1|(function a(package) { "use strict"; })
 |           ^
